移除CollectionWrapper，使用JAVA8自带的Stream流式操作。